--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,13 @@
     <title>Chat-Sergio</title>
 </head>
 <body>
-    <div id="welcome-screen">
-        <h1 id="max-mes">Bienvenido/a</h1>
-        <p id="mini-mes">HV-PC-2</p>
-        <button id="enter-chat">Entrar al Chat</button>
+    <div class="welcome-screen">
+        <h1>Bienvenido/a</h1>
+        <p>HV-PC-2</p>
+        <button class="enter-chat">Entrar al Chat</button>
     </div>
-    <script type="module" src="script/script.js" async></script>
-    <footer id="footer">
+    <script type="module" src="script.js"></script>
+    <footer class="footer">
         <p>Desarrollado por <strong>Sergio Cerrillo</strong> © 2024</p>
     </footer>
 </body>
