--- a/client/post-index.html
+++ b/client/post-index.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="/css/styles-post-index.css" />    
 </head>
 <body>
-    <section id="return-block">
+    <section class="return-block">
         <h2>Volver al menú principal:</h2>
-        <button id="return-button">SALIR</button>
+        <button class="return-button">SALIR</button>
     </section>
-    <section id="chat">
-        <button id="delete-button">BORRAR CHAT</button>
-        <ul id="messages"></ul>
-        <form id="form">
-            <input type="text" id="input" placeholder="Escribe aquí..." autocomplete="off" />
+    <section class="chat">
+        <button class="delete-button">BORRAR CHAT</button>
+        <ul class="messages"></ul>
+        <form class="form">
+            <input type="text" class="input" placeholder="Escribe aquí..." autocomplete="off" />
             <button type="submit">Enviar</button>
         </form>
     </section>
-    <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
-    <script type="module" src="script/script.js" async></script>
-    <footer id="footer">
+
+    <script type="module" src="script.js"></script>
+    <footer class="footer">
         <p>Desarrollado por <strong>Sergio Cerrillo</strong> © 2024</p>
     </footer>
 </body>
