--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat-Sergio</title>
-    <link rel="stylesheet" href="src/chat.css">
+    <link rel="stylesheet" href="src/components/chat.css">
 </head>
 <body>
     <div id="root"></div>
